--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/sock.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pf2e_gimpcloset</title>
+    <title>Magic Socks - PF2E Magic Items Cards Generator</title>
   </head>
   <body>
     <div id="root"></div>
